--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=1024">
 <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1" />
 <meta name="author" content="Dreal Software Solutions" />
 <meta name="description" content="Kaustubh Weds Trupti" />
@@ -11,19 +12,19 @@
 <link rel="stylesheet" href="css/carousel.css">
 <link href='http://fonts.googleapis.com/css?family=Clicker+Script' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800' rel='stylesheet' type='text/css'>
-	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 <script>
-		var viewMode = getCookie("view-mode");
-	if(viewMode == "desktop"){
-		viewport.setAttribute('content', 'width=1024');
-	}else if (viewMode == "mobile"){
-		viewport.setAttribute('content', 'width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no');
-	}
+
+
+	<!-- var viewMode = getCookie("view-mode"); -->
+	<!-- if(viewMode == "desktop"){ -->
+		<!-- viewport.setAttribute('content', 'width=1024'); -->
+	<!-- }else if (viewMode == "mobile"){ -->
+		<!-- viewport.setAttribute('content', 'width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no'); -->
+	<!-- } -->
 	
 	
-	
-	
-	</script>
+</script>
 <style>
 
 /*html, body {
@@ -124,6 +125,8 @@
 </head>
 <body>
 <div id="main_container">
+<embed src="song.mp3" loop="true" autostart="true" width="2"
+         height="0">
 		<div class="bg_heart"></div>
 	<div id="page" class="bg_heart">
     <a class="show_menu" href="#"><img src="images/mobile_menu_open.png" alt="" title="" /></a>
